Updated Loading screen Fixed sidebar width in collapsed mode AppInsights updated to async

--- a/src/KubeUI.Core/wwwroot/css/site.css
+++ b/src/KubeUI.Core/wwwroot/css/site.css
@@ -46,7 +46,6 @@ app {
 
 .sidebar {
     background-color: #2f2f2f;
-    width: 245px !important;
 }
 
     .sidebar .top-row {
@@ -155,7 +154,7 @@ app {
     }
 
     .sidebar {
-        width: 250px;
+        width: 245px;
         height: 100vh;
         position: sticky;
         top: 0;
@@ -181,70 +180,80 @@ app {
     }
 }
 
-
-.loader,
-.loader:before,
-.loader:after {
-    background: #04173d;
-    -webkit-animation: load1 1s infinite ease-in-out;
-    animation: load1 1s infinite ease-in-out;
-    width: 1em;
-    height: 4em;
+.spinner {
+    margin: 100px auto;
+    width: 50px;
+    height: 40px;
+    text-align: center;
+    font-size: 10px;
 }
 
-.loader {
-    color: #04173d;
-    text-indent: -9999em;
-    margin: 88px auto;
-    position: relative;
-    font-size: 11px;
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-animation-delay: -0.16s;
-    animation-delay: -0.16s;
-}
-
-    .loader:before,
-    .loader:after {
-        position: absolute;
-        top: 0;
-        content: '';
+    .spinner > div {
+        background-color: #fff;
+        height: 100%;
+        width: 6px;
+        display: inline-block;
+        -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+        animation: sk-stretchdelay 1.2s infinite ease-in-out;
     }
 
-    .loader:before {
-        left: -1.5em;
-        -webkit-animation-delay: -0.32s;
-        animation-delay: -0.32s;
+    .spinner .rect2 {
+        -webkit-animation-delay: -1.1s;
+        animation-delay: -1.1s;
     }
 
-    .loader:after {
-        left: 1.5em;
+    .spinner .rect3 {
+        -webkit-animation-delay: -1.0s;
+        animation-delay: -1.0s;
     }
 
-@-webkit-keyframes load1 {
-    0%, 80%, 100% {
-        box-shadow: 0 0;
-        height: 4em;
+    .spinner .rect4 {
+        -webkit-animation-delay: -0.9s;
+        animation-delay: -0.9s;
     }
 
-    40% {
-        box-shadow: 0 -2em;
-        height: 5em;
+    .spinner .rect5 {
+        -webkit-animation-delay: -0.8s;
+        animation-delay: -0.8s;
+    }
+
+@-webkit-keyframes sk-stretchdelay {
+    0%, 40%, 100% {
+        -webkit-transform: scaleY(0.4)
+    }
+
+    20% {
+        -webkit-transform: scaleY(1.0)
     }
 }
 
-@keyframes load1 {
-    0%, 80%, 100% {
-        box-shadow: 0 0;
-        height: 4em;
+@keyframes sk-stretchdelay {
+    0%, 40%, 100% {
+        transform: scaleY(0.4);
+        -webkit-transform: scaleY(0.4);
     }
 
-    40% {
-        box-shadow: 0 -2em;
-        height: 5em;
+    20% {
+        transform: scaleY(1.0);
+        -webkit-transform: scaleY(1.0);
     }
 }
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(28,28,28);
+    z-index: 2000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    --sk-color: white;
+}
+
 
 .sticky-offset {
     top: 73.6px;
